--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "http": "0.0.0",
+    "morgan": "~1.9.1",
+    "socket.io": "^2.3.0"
   }
 }
