--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -14,8 +15,8 @@
     "express": "~4.16.1",
     "http": "0.0.0",
     "morgan": "~1.9.1",
-    "socket.io": "^2.3.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
