--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^7.18.2",
     "socket.io": "^2.3.0"
